@@ -15,7 +15,6 @@ import jakarta.transaction.Transactional;
 import jakarta.validation.constraints.NotNull;
 import java.time.Instant;
 import java.util.*;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -88,10 +87,9 @@ public class InjectStatusService {
     return inject.getStatus().map(InjectStatus::getTraces).orElse(Collections.emptyList()).stream()
         .filter(trace -> ExecutionTraceAction.COMPLETE.equals(trace.getAction()))
         .filter(trace -> trace.getAgent() != null)
-        .collect(
-            Collectors.groupingBy(
-                trace -> trace.getAgent().getId(),
-                Collectors.collectingAndThen(Collectors.toList(), traces -> traces.get(0))))
+        .map(trace -> trace.getAgent().getId())
+        .distinct()
+        .toList()
         .size();
   }
 
